static/styles/zulip.css
/* ... */
body.narrowed_view,
.narrowed_view #tab_bar,
.narrowed_view #tab_bar_underpadding,
.narrowed_view .message_list,
.narrowed_view #compose-container {
    background-color: #effcff;
   -webkit-transition: background-color 200ms linear;
   -moz-transition: background-color 200ms linear;
   -o-transition: background-color 200ms linear;
   -ms-transition: background-color 200ms linear;
   transition: background-color 200ms linear;
}

input,
button,
select,
textarea {
    font-family: 'Humbug', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    line-height: normal;
}

blockquote p {
    font-weight: normal;
}

a {
    cursor: pointer;
}

/*
.container-fluid {
    max-width: 1230px;
    margin: 0px auto;
    padding-left: 5px;
    padding-right: 5px;
}
*/

.header {
    position: fixed;
    z-index: 100;
    width: 100%;
    background: rgb(172,197,193); /* Old browsers */
    background: -moz-linear-gradient(top,  rgba(172,197,193,1) 0%, rgba(220,241,234,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(172,197,193,1)), color-stop(100%,rgba(220,241,234,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(172,197,193,1) 0%,rgba(220,241,234,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(172,197,193,1) 0%,rgba(220,241,234,1) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(172,197,193,1) 0%,rgba(220,241,234,1) 100%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba(172,197,193,1) 0%,rgba(220,241,234,1) 100%); /* W3C */

    background-image: url(/static/images/backgrounds/lightteal.png);
    background-size: 150px 50px;

    border-bottom: 1px solid #314945;
}

.app {
    width: 100%;
    z-index: 99;
}

.app-main,
.header-main {
    max-width: 1200px;
    min-width: 950px;
    margin: 0px auto;
    padding: 0px 5px 0px 5px;
    position: relative;
}

.column-left,
.column-right {
    width: 200px;
    max-width: 200px;
}

.column-left {
    float: left;
}

.column-right {
    float: right;
}

.app-main .column-left .left-sidebar,
.app-main .column-right .right-sidebar {
    position: fixed;
    margin-top: 50px;
    width: 200px;
    z-index:3;
}

.app-main .column-right .right-sidebar {
    padding-left: 15px;
}

.column-middle {
    float: left;
    width: 100%;
    margin-right: -200px;
    margin-left: -200px;
}

.column-middle-inner {
    margin-right: 200px;
    margin-left: 200px;
}

.app-main .column-middle .column-middle-inner {
    margin-left: 400px;
    margin-right: 0px;
}

textarea,
input {
    font-family: 'Humbug', Helvetica, Arial, sans-serif;
}


/* Override Bootstrap's fixed sizes for various elements */

textarea,
label {
    font-size:   inherit;
    line-height: inherit;
}

/* List of text-like input types taken from Bootstrap */
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"]
{
    font-size: inherit;
    height:    1.4em;
}

li,
.table th,
.table td {
    line-height: inherit;
}

.btn {
    font-size:  inherit;
    height:     auto;
    line-height: 100%;
}

.btn-large {
    font-size: 115%;
}

.header-main .logo {
    display: block;
    font-size: 120%;
    font-weight: 900;
    text-shadow: none;
    color: #ffffff;
    font-variant: small-caps;
    letter-spacing: 2px;
    line-height: 18px;
    padding-top: 10px;
    padding-left: 5px;
    text-decoration: none;
    position: relative;
 }

 .header-main .logoimage {
    width: 45px;
    height: auto;
 }

 #user-settings-avatar {
    width: 100px;
    height: 100px;
    margin-top: 10px;
    border-radius: 50px;
 }

/* Classes for hiding and showing controls */

.notdisplayed {
    display: none !important;
}

.notvisible {
    visibility: hidden !important;
    width: 0px !important;
    min-width: 0px !important;
    min-height: 0px !important;
    height: 0px !important;
    overflow: hidden !important;
    position: absolute !important;
}

/* Relative positioning */

.position-relative {
    position: relative;
}


/* Lighter strong */

strong {
    font-weight: 600;
}


/* Inline and block code */

code {
    /* 12/14 em, so bootstrap's default 12 px,
       when body is the default 14 px */
    font-size: 0.857em;
}

.codehilite {
    display: block !important;
    border: none !important;
    background: none !important;
}

pre {
    /* 12/14 em, so bootstrap's default 12 px,
       when body is the default 14 px */
    font-size: 0.857em;
    line-height: inherit;
    white-space: pre;
    overflow-x: auto;
    word-wrap: normal;
    /* Bootstrap's default here is top: 0px, bottom: 10px */
    margin-top: 5px;
    margin-bottom: 5px;
}

pre code {
    white-space: pre;
}

/* Style inline code inside a link
   to look more like a normal link */
a code {
    color:        #08C;
    border-color: #08C;
}

a:hover code {
    color:        #005580;
    border-color: #005580;
}

.preserve_spaces {
    white-space: pre-wrap;
}

.sidebar-nav {
    padding: 0px 10px 20px 0px;
    margin-top: 1em;
    overflow: hidden;
    text-overflow: ellipsis;
    /* This is a little hacky, but for whatever reason, span2 in a row-fluid
       doesn't consistently take on the right width when it's in an affix, so
       we need to specify a max size. */
    max-width: 200px;
}

#left-sidebar .brand {
    display: table-row;
}

.edit-profile {
    font-weight: 300;
    font-size: 12px;
}


.logout {
    white-space: nowrap;
}

.new_message_button {
    padding-top: 1.1em;
}

.sidebar-title, .share-the-love-title {
    font-size: 11px;
    font-weight: normal;
    display: inline;
}


#streams_list:hover #streams_inline_cog {
   visibility: visible;
   opacity: 0.5;
}

#streams_list #streams_inline_cog:hover {
   opacity: 1.0;
}
/* ... */

